--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+  <header>
     <title>Jane Doette</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Source+Code+Pro:300" rel="stylesheet">
-  </head>
+  </header>
   <body>
     <div class="container">
       <div class="row">
@@ -28,27 +28,29 @@
       <div>
         <img src="index_files/html_stock_image-min.png" class="img-responsive">
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Featured Work</h2>
+      <section class="FeaturedWork">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Featured Work</h2>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <img src="index_files/Appify-min.png" class="img-responsive">
-          <h3>APPIFY</h3>
-          <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="index_files/Appify-min.png" class="img-responsive">
+            <h3>APPIFY</h3>
+            <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
+          </div>
+          <div class="col-md-4">
+            <img src="index_files/Sunflower-min.png" class="img-responsive">
+            <h3>SUNFLOWER</h3>
+            <p><a href="https://github.com/udacity/Sunflower">https://github.com/udacity/Sunflower/</a></p>
+          </div>
+          <div class="col-md-4">
+            <img src="index_files/Bokeh-min.png" class="img-responsive">
+            <h3>Bokeh</h3>
+            <p><a href="https://github.com/udacity/Bokeh">https://github.com/udacity/Bokeh</a></p>
+          </div>
         </div>
-        <div class="col-md-4">
-          <img src="index_files/Sunflower-min.png" class="img-responsive">
-          <h3>SUNFLOWER</h3>
-          <p><a href="https://github.com/udacity/Sunflower">https://github.com/udacity/Sunflower/</a></p>
-        </div>
-        <div class="col-md-4">
-          <img src="index_files/Bokeh-min.png" class="img-responsive">
-          <h3>Bokeh</h3>
-          <p><a href="https://github.com/udacity/Bokeh">https://github.com/udacity/Bokeh</a></p>
-        </div>
-      </div>
+      </section>
     </div>
 </body></html>
