--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!doctype html>
 <html>
-  <header>
+  <head>
     <title>Jane Doette</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,25 +9,25 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Source+Code+Pro:300" rel="stylesheet">
-  </header>
+  </head>
   <body>
     <div class="container">
-      <div class="row">
+      <header class="row">
         <div class="col-md-6">
-           <img src="index_files/Udacity_Logo.png" vspace="20" class="img-responsive">
+           <img src="index_files/Udacity_Logo.png"class="img-responsive" alt="Udacity Logo">
         </div>
         <div class="col-md-6">
           <h1>JANE DOETTE</h1>
           <h3>FRONT-END NINJA</h3>
         </div>
-      </div>
+      </header>
       <div class="row">
         <div class="col-md-12">
           <hr>
         </div>
       </div>
       <div>
-        <img src="index_files/html_stock_image-min.png" class="img-responsive">
+        <img src="index_files/html_stock_image-min.png" class="img-responsive" alt="HTTP Stock Image">
       </div>
       <section class="FeaturedWork">
         <div class="row">
@@ -36,17 +37,17 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="index_files/Appify-min.png" class="img-responsive">
+            <img src="index_files/Appify-min.png" class="img-responsive" alt="Appify Image">
             <h3>APPIFY</h3>
             <p><a href="https://github.com/udacity/Appify/">https://github.com/udacity/Appify/</a></p>
           </div>
           <div class="col-md-4">
-            <img src="index_files/Sunflower-min.png" class="img-responsive">
+            <img src="index_files/Sunflower-min.png" class="img-responsive" alt="Sunflower Image">
             <h3>SUNFLOWER</h3>
             <p><a href="https://github.com/udacity/Sunflower">https://github.com/udacity/Sunflower/</a></p>
           </div>
           <div class="col-md-4">
-            <img src="index_files/Bokeh-min.png" class="img-responsive">
+            <img src="index_files/Bokeh-min.png" class="img-responsive" alt="Bokeh Image">
             <h3>Bokeh</h3>
             <p><a href="https://github.com/udacity/Bokeh">https://github.com/udacity/Bokeh</a></p>
           </div>
